<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EpicWarBot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="VkLogin">Login:</string>
    <string name="VkPassword">Password:</string>
    <string name="btnDoAllTasks">Do all tasks</string>
    <string name="btnUpdateSettings">Update settings</string>
    <string name="btnStartService">Start service</string>
    <string name="btnStopService">Stop service</string>
    <string name="chbIsServiceStarted">Running</string>
    <string name="chbFlagResources">Collect resources</string>
    <string name="chbFlagSendReceiveGifts">Send and receive gifts</string>
    <string name="chbFlagCollectCemetery">Collect cemetery</string>
    <string name="tvInterval">Interval</string>
    <string name="hintLog">log</string>
    <string name="icon">icon</string>
</resources>
