<?xml version="1.0" encoding="utf-8"?><!DOCTYPE ScrollView>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragment_table_scroll1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mf_repeat"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/mainTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="2dp"
        android:stretchColumns="*">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_column="1"
                    android:id="@+id/chbIsServiceStarted"
                    android:text="@string/chbIsServiceStarted"
                    android:layout_gravity="start"
                    android:textColor="#ff000000"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MainFragmentColumnNames_TV"
                    android:text="@string/VkLogin"/>

                <EditText
                    android:id="@+id/etVkLogin"
                    style="@style/MainFragmentColumn_EditText"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MainFragmentColumnNames_TV"
                    android:text="@string/VkPassword"/>

                <EditText
                    android:id="@+id/etVkPassword"
                    style="@style/MainFragmentColumn_EditText"
                    android:inputType="textPassword"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_column="1"
                    android:id="@+id/chbFlagResources"
                    android:text="@string/chbFlagResources"
                    android:layout_gravity="start"
                    android:textColor="#ff000000"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:id="@+id/tblPartRep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableLayout
            android:id="@+id/tblButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="0dp"
            android:stretchColumns="*">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:text=""
                android:textSize="12sp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnDoAllTasks"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnDoAllTasks"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/btnUpdateSettings"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnUpdateSettings"
                    android:textSize="12sp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnStartService"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnStartService"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/btnStopService"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnStopService"
                    android:textSize="12sp"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:id="@+id/tblTaskResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="0dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etTasksLog"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:gravity="top|left"
                    android:scrollbars="vertical"
                    android:textSize="12sp"
                    android:textAlignment="center"/>
            </TableRow>
        </TableLayout>
    </TableLayout>

</ScrollView>

